jvm gc & tcp